--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lomo.html">Lomo</a>
+
+    <ul>
+      <li><a href="recipes/anticucho.html">Anticucho</a></li>
+      <li><a href="recipes/lomo.html">Lomo</a></li>
+      <li><a href="recipes/tallarin.html">Tallarin</a></li>
+    </ul>
 </body>
 </html>
